# AdventOfCode2022

cpp/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  common.h  meson.build
f#/: 1.fsx  Common.fsx
