project('advent2022', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++20'])

executable('1',
    '1.cpp',
    dependencies: [])

executable('2',
    '2.cpp',
    dependencies: [])

executable('3',
    '3.cpp',
    dependencies: [])

executable('4',
    '4.cpp',
    dependencies: [])

# executable('5',
#     '5.cpp',
#     dependencies: [])

# executable('6',
#     '6.cpp',
#     dependencies: [])

# executable('7',
#     '7.cpp',
#     dependencies: [])

# executable('8',
#     '8.cpp',
#     dependencies: [])

# executable('9',
#     '9.cpp',
#     dependencies: [])

# executable('10',
#     '10.cpp',
#     dependencies: [])

# executable('11',
#     '11.cpp',
#     dependencies: [])

# executable('12',
#     '12.cpp',
#     dependencies: [])

# executable('13',
#     '13.cpp',
#     dependencies: [])

# executable('14',
#     '14.cpp',
#     dependencies: [])

# executable('15',
#     '15.cpp',
#     dependencies: [])

# executable('16',
#     '16.cpp',
#     dependencies: [])

# executable('17',
#     '17.cpp',
#     dependencies: [])